fix: form alignment for mobile and tablet layouts

--- a/public/styles.css
+++ b/public/styles.css
@@ -82,13 +82,12 @@ a {
 
 nav {
   display: flex;
-  align-items: center;
   justify-content: center;
   background-color: var(--main-color);
-  height: 4rem;
   border-radius: 1rem;
   margin: 0.3rem;
-  padding: 0.3rem;
+  padding: 0.7rem;
+  align-items: center;
 }
 
 nav > ul {
@@ -108,6 +107,7 @@ nav  a {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+  margin-right: 1.5rem;
 }
 
 .logo {
@@ -218,7 +218,7 @@ button,a {
 
 button:hover,a:hover {
   background-color: var(--hover-color);
-  /* border: 2px solid var(--hover-color); */
+  
 }
 
 .form-container {
@@ -255,7 +255,11 @@ button:hover,a:hover {
 }
 
 .form-buttons-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   margin: auto;
+  gap: 0.5rem;
   
 } 
 
@@ -263,3 +267,38 @@ input,select {
   height: 2.3rem;
 }
 
+
+
+/* media queries here below */
+
+@media (max-width: 480px) {
+    .main-buttons-container {
+      width: 90vw;
+      margin: auto;
+      /* border: 2px solid black; */
+      flex-direction: column;
+      gap: 1.2rem;
+      margin-top: 1.8rem;
+    }
+
+    .categories-div,.items-div {
+      width: 100%;
+    }
+
+    
+
+    nav {
+      font-size: 0.7rem;
+      font-weight: 600;
+    }
+
+    .logo {
+      font-size: 1.3rem;
+    }
+
+    .update-del-add-form {
+      width: 100%;
+    }
+
+
+}
